--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="confirm_new_password">Confirm New Password*</string>
     <string name="new_password">New Password*</string>
     <string name="current_password">Current Password*</string>
-    <string name="rentals">Rentals</string>
+    <string name="vicharan">Vicharan</string>
     <string name="discard_changes">Discard Changes</string>
     <string name="update_password">Update Password</string>
     <string name="security">Security</string>
