--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,7 @@
     <string name="_1234567890">1234567890</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_thumbnail">ThumbnailActivity</string>
+    <string name="title_activity_main_screen">MainScreenActivity</string>
 
 </resources>
